# pyinterpolate

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  1-2-semivariogram-models.ipynb  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  DATA_STRUCTURE  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  SETUP.md  __init__.py  changelog.rst  environment.yml  license.txt  pyproject.toml  python-package.yml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  setup_old.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-install-and-test-on-linux-always.yml  python-package-install-linux-check.yml  python-package-install-macos-check.yml  python-package-install-windows-check.yml  python-tests-coverage.yml
data/: .gorzow_dem_10p.dat.icloud  .gorzow_wielkopolski_dem.tif.icloud  gorzow_wielkopolski_dem.tif  gorzow_wielkopolski_dem.tif.aux.xml  pol_part.dbf  pol_part.qpj  pol_part.shp  pol_part.shx  pol_pop_part.dbf  pol_pop_part.prj  pol_pop_part.shp  pol_pop_part.shx
dev/: todo.md
dev/testing-large-numpy-arrays-for-ellipse-selection/: angular.py  directional.py  experimental.py
developer/data/: DATA_STRUCTURE.md
docs/: Makefile  apidoc_command  conf.py  index.rst  requirements.txt
docs/old/: conf.py  index.rst  requirements.txt
docs/source/: code_documentation.rst  conf.py  contribution.rst  index.rst  modules.rst  pyinterpolate.distance.rst  pyinterpolate.kriging.models.point.rst  pyinterpolate.kriging.models.rst  pyinterpolate.kriging.utils.rst  pyinterpolate.pipelines.rst  pyinterpolate.processing.utils.rst  pyinterpolate.pyinterpolate.idw.rst  pyinterpolate.pyinterpolate.io.rst  pyinterpolate.pyinterpolate.kriging.models.rst  pyinterpolate.pyinterpolate.processing.preprocessing.rst  pyinterpolate.pyinterpolate.processing.rst  pyinterpolate.pyinterpolate.rst  pyinterpolate.pyinterpolate.test.dataviz.rst  pyinterpolate.pyinterpolate.test.profile.kriging.point.rst  pyinterpolate.pyinterpolate.test.profile.kriging.rst  pyinterpolate.pyinterpolate.test.rst  pyinterpolate.pyinterpolate.test.test_io.rst  pyinterpolate.pyinterpolate.test.test_kriging.rst  pyinterpolate.pyinterpolate.test.test_pipelines.rst  pyinterpolate.pyinterpolate.test.test_variogram.regularize.rst  pyinterpolate.pyinterpolate.test.test_variogram.theoretical.rst  pyinterpolate.pyinterpolate.variogram.empirical.rst  pyinterpolate.pyinterpolate.variogram.regularization.block.rst  pyinterpolate.pyinterpolate.variogram.regularization.rst  pyinterpolate.pyinterpolate.variogram.rst  pyinterpolate.pyinterpolate.variogram.theoretical.models.rst  pyinterpolate.rst  pyinterpolate.variogram.empirical.rst  pyinterpolate.variogram.regularization.rst  pyinterpolate.variogram.rst  pyinterpolate.variogram.theoretical.models.rst  pyinterpolate.variogram.theoretical.rst  setup.ipynb  tutorials.rst
docs_oldies/: requirements.txt
docs_oldies/old/: index.rst
docs_oldies/source/: conf.py  index.rst  license.rst
docs_oldies/v0_3_temp/: input_data_schema.md
helper_functions/: euclidean_distance.py  euclidian_distance.py
kriging/: kriging.py
paper/: example_use_case.md  paper.bib  paper.md
paper/supplementary materials/: areal_data_transformation.md  comparison_to_gstat.md  example_use_case.md  theory_of_kriging.md
pyint_lib/helper_functions/: euclidean_distance.py
pyint_lib/kriging/: kriging.py
pyint_lib/statistical_functions/: covariance.py  semivariance.py
pyinterpolate/: __init__.py  __main__.py  cli.py
pyinterpolate/data_visualization/: interpolate_raster.py
pyinterpolate/distance/: __init__.py  calculate_distances.py  clusters.py  distance.py  gridding.py  point.py  temp_distance.py
pyinterpolate/idw/: __init__.py  idw.py
pyinterpolate/io/: __init__.py  get_points_within_area.py  read_data.py
pyinterpolate/io_ops/: get_points_within_area.py  prepare_areal_shapefile.py  read_data.py
pyinterpolate/kriging/: __init__.py  block_regularization.py  covariance.py  deconvolution.py  deconvolution_copy.py  kriging.py  (+8 more)
sample_data/: data.py
statistical_functions/: covariance.py  fit_semivariance.py  semivariance.py
tests-cli/: test_cli.py
tutorials/: (Basic) Spatial Dependency Index.ipynb  A11-Semivariogram-Estimation.ipynb  A12-Theoretical-Models.ipynb  A13-Spatial-Dependence-Index.ipynb  A21-Directional-Semivariogram.ipynb  A22-Variogram-Points-Cloud.ipynb  A23-Experimental-Variogram-and-Variogram-Point-Cloud-classes.ipynb  B11-Ordinary-and-Simple-Kriging.ipynb  B12-Kriging-Benchmarking.ipynb  B13-Outliers-and-Kriging.ipynb  B21-Directional-Ordinary-Kriging.ipynb  Blocks to points Ordinary Kriging interpolation (Intermediate).ipynb  C11-Blocks-to-Points-with-Ordinary-Kriging.ipynb  C12-Semivariogram-Regularization.ipynb  C13-Poisson-Kriging-Centroid-based.ipynb  C14-Poisson-Kriging-Area-to-Area.ipynb  C15-Poisson-Kriging-Area-to-Point.ipynb  Compare Kriging results to the IDW model (Basic).ipynb  Directional Ordinary Kriging (Intermediate).ipynb  Directional Semivariograms (Basic).ipynb  Experimental Variogram and Variogram Point Cloud classes (Basic).ipynb  How good is my model? Compare Kriging results to the IDW model (Basic).ipynb  How good is our Kriging model - test  it with IDW algorithm (Basic).ipynb  How good is our Kriging model - test it against IDW algorithm (Basic).ipynb  Ordinary and Simple Kriging (Basic).ipynb  Outliers and Their Influence on the Final Model (Intermediate).ipynb  Poisson Kriging - Area to Area (Advanced).ipynb  Poisson Kriging - Area to Point (Advanced).ipynb  Poisson Kriging - Centroid Based (Advanced).ipynb  Semivariogram Estimation (Basic).ipynb  Semivariogram Regularization (Intermediate)-Copy1.ipynb  Semivariogram Regularization (Intermediate).ipynb  Simple Kriging - 1D case.ipynb  Simple Kriging - 2D use case.ipynb  Spatial Dependence Index (Basic).ipynb  Theoretical Models (Basic).ipynb  Variogram Point Cloud (Basic).ipynb  a-1-1-experimental-semivariogram-and-covariogram.ipynb  calculate_distance.ipynb  interpolation_results_areal_to_point.dbf  (+4 more)
(+712 files in other folders)
