[metadata]
name = pyinterpolate
description = Spatial Interpolation in Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
version = 0.4.1
url = https://github.com/DataverseLabs/pyinterpolate
download_url = https://github.com/DataverseLabs/pyinterpolate/archive/
author = Szymon Moliński
author_email = simon@dataverselabs.com
license = BSD 3-clause
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: GIS
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://readthedocs.org/projects/pyinterpolate/
    Source = https://github.com/DataverseLabs/pyinterpolate
    Tracker = https://github.com/DataverseLabs/pyinterpolate/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    dask==2022.2.1; python_version=='3.8' and sys_platform=='darwin'
    dask==2023.3.2; python_version>='3.9' and sys_platform=='darwin'
    dask==2023.3.2; python_version>='3.8' and sys_platform=='linux'
    dask>=2023.3.2; python_version>='3.8' and sys_platform=='windows'
    dask==2021.10.0; python_version=='3.7'
    descartes
    geopandas>=0.12.2; python_version>='3.8'
    geopandas==0.10.2; python_version=='3.7'
    hdbscan
    matplotlib>=3.6
    numpy>=1.23; python_version>='3.10'
    numpy==1.21.2; python_version<='3.9'
    numpy==1.21.6; python_version=='3.7' and sys_platform=='linux'
    numpy==1.21.5; python_version=='3.7' and sys_platform=='darwin'
    pandas>=1.4.3; python_version>='3.9'
    pandas==1.4.3; python_version=='3.8'
    pandas==1.3.5; python_version=='3.7'
    prettytable>=3.3.0
    pyogrio
    rtree>=1.0.0
    shapely>=2.0.1
    scipy>=1.9.0; python_version>='3.8'
    scipy==1.7.3; python_version=='3.7'
    tqdm>=4.64; python_version>'3.9'
    tqdm==4.64.0; python_version<='3.9'

[options.packages.find]
exclude =
    tests*
    tutorials*
    new_concepts*
    sample_data*
    developer*
    docs*
    samples*

[options.package_data]
* = *.txt, *.rst