[metadata]
name = pyinterpolate
description = Spatial Interpolation in Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
version = 0.5.0
url = https://github.com/DataverseLabs/pyinterpolate
download_url = https://github.com/DataverseLabs/pyinterpolate/archive/
author = Szymon Moliński
author_email = simon@dataverselabs.com
license = BSD 3-clause
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: GIS
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://readthedocs.org/projects/pyinterpolate/
    Source = https://github.com/DataverseLabs/pyinterpolate
    Tracker = https://github.com/DataverseLabs/pyinterpolate/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    dask==2022.2.1; python_version=='3.8' and sys_platform=='darwin'
    dask==2023.3.2; python_version>='3.9' and sys_platform=='darwin'
    dask==2023.3.2; python_version>='3.8' and sys_platform=='linux'
    dask>=2023.3.2; python_version>='3.8' and sys_platform=='windows'
    descartes
    geopandas>=0.12.2; python_version>='3.8'
    hdbscan==0.8.26
    scikit-learn==1.2.2
    matplotlib>=3.6
    numpy>=1.23; python_version>='3.10'
    numpy==1.21.2; python_version<='3.9'
    numpy==1.21.5; python_version=='3.7' and sys_platform=='darwin'
    pandas>=1.4.3; python_version>='3.9'
    pandas==1.4.3; python_version=='3.8'
    prettytable>=3.3.0
    pyogrio
    rtree>=1.0.0
    shapely>=2.0.1
    scipy>=1.9.0; python_version>='3.8'
    tqdm>=4.64; python_version>'3.9'
    tqdm==4.64.0; python_version<='3.9'
    pyarrow
    pylibtiff==0.5.1

[options.packages.find]
exclude =
    tests*
    tutorials*
    new_concepts*
    sample_data*
    developer*
    docs*
    samples*

[options.package_data]
* = *.txt, *.rst