[metadata]
name = pyinterpolate
description = Spatial Interpolation in Python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
version = 0.5.4
url = https://github.com/DataverseLabs/pyinterpolate
download_url = https://github.com/DataverseLabs/pyinterpolate/archive/
author = Szymon Moliński
author_email = simon@dataverselabs.com
license = BSD 3-clause
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: GIS
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Documentation = https://readthedocs.org/projects/pyinterpolate/
    Source = https://github.com/DataverseLabs/pyinterpolate
    Tracker = https://github.com/DataverseLabs/pyinterpolate/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    dask==2023.3.2; python_version>='3.9' and sys_platform=='darwin'
    descartes
    geopandas; python_version>='3.9'
    scikit-learn>=1.6.0
    matplotlib>=3.6
    numpy<2; python_version>='3.10'
    numpy==1.21.2; python_version<='3.9'
    pandas>=1.4.3; python_version>='3.9'
    prettytable>=3.3.0
    pyogrio
    rtree>=1.0.0
    shapely>=2.0.1
    tqdm>=4.64; python_version>'3.9'
    tqdm==4.64.0; python_version<='3.9'
    pyarrow
    pylibtiff>=0.6.1
    deprecation>=2.1.0

[options.packages.find]
exclude =
    tests*
    tutorials*
    new_concepts*
    sample_data*
    developer*
    docs*
    samples*

[options.package_data]
* = *.txt, *.rst